--- a/src/assets/svgs/bs4_forum.html
+++ b/src/assets/svgs/bs4_forum.html
@@ -421,7 +421,7 @@ body{
     color: #4a5568;
 }
 .card {
-    box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0, 0, 0, 0.226);
 }
 
 .card {
@@ -432,7 +432,7 @@ body{
     word-wrap: break-word;
     background-color: #fff;
     background-clip: border-box;
-    border: 0 solid rgba(0,0,0,.125);
+    border: 0 solid rgba(0, 0, 0, 0.274);
     border-radius: .25rem;
 }
 
